--- a/src/plot_quality_prediction/plot_quality_finetuning.ipynb
+++ b/src/plot_quality_prediction/plot_quality_finetuning.ipynb
@@ -73,10 +73,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 595
         },
         "id": "oJHxiqdXMG8h",
-        "outputId": "8f893699-d9f7-4121-cf6a-c03b0c3458a9"
+        "outputId": "d9096f80-1b96-40af-9ca6-c85550f6c06b"
       },
       "source": [
         "from drive.MyDrive.how_good_is_my_plot.fine_tune_for_plots import train_model, initialize_model\n",
@@ -92,12 +93,16 @@
         "import time\n",
         "import os\n",
         "import copy\n",
+        "import numpy as np\n",
         "\n",
         "# The split we are training and testing on\n",
         "split = 1\n",
         "\n",
         "# Data directory on which you want to train the model\n",
-        "data_dir = f\"drive/MyDrive/how_good_is_my_plot/final_splits/split{split}\"\n",
+        "data_dir = f\"drive/MyDrive/how_good_is_my_plot/final_plots_forMT\"\n",
+        "\n",
+        "np.random.seed = 0\n",
+        "\n",
         "# Number of classes in the dataset\n",
         "num_classes = 1\n",
         "\n",
@@ -128,10 +133,10 @@
         "print(\"Initializing Datasets and Dataloaders...\")\n",
         "\n",
         "# Create training and validation datasets\n",
-        "image_datasets = {x: RegressionDataset(os.path.join(data_dir, x), os.path.join(data_dir, x, 'split_scores_elo.csv'),\n",
+        "image_datasets = {x: RegressionDataset(data_dir, f\"drive/MyDrive/how_good_is_my_plot/csv_splits/split{split}_{x}.csv\",\n",
         "                                        data_transforms[x]) for x in ['train', 'val']}\n",
         "\n",
-        "# Create training and validation dataloaders\n",
+        "# Create training and validation dataloaders TUKROJREOGJOREJGRGJEOŠREJOREJGŠER\n",
         "dataloaders_dict = {\n",
         "    x: torch.utils.data.DataLoader(image_datasets[x], batch_size=batch_size, shuffle=True, num_workers=2) for x in\n",
         "    ['train', 'val']}\n",
@@ -156,7 +161,7 @@
         "\n",
         "torch.save(model_ft.state_dict(), f\"drive/MyDrive/how_good_is_my_plot/cnn_weights/resnet101_quality.pth\")"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,114 +169,32 @@
             "Initializing Datasets and Dataloaders...\n",
             "Epoch 0/49\n",
             "----------\n",
-            "train Loss: 159.8606\n",
-            "val Loss: 8.9344\n",
+            "train Loss: 159.2355\n",
+            "val Loss: 8.8098\n",
             "\n",
             "Epoch 1/49\n",
             "----------\n",
-            "train Loss: 134.3601\n",
-            "val Loss: 159.1038\n",
+            "train Loss: 143.4390\n",
+            "val Loss: 36.4210\n",
             "\n",
             "Epoch 2/49\n",
-            "----------\n",
-            "train Loss: 119.1684\n",
-            "val Loss: 327.7380\n",
-            "\n",
-            "Epoch 3/49\n",
-            "----------\n",
-            "train Loss: 114.3477\n",
-            "val Loss: 160.8132\n",
-            "\n",
-            "Epoch 4/49\n",
-            "----------\n",
-            "train Loss: 94.5583\n",
-            "val Loss: 45.1211\n",
-            "\n",
-            "Epoch 5/49\n",
-            "----------\n",
-            "train Loss: 87.1248\n",
-            "val Loss: 121.6965\n",
-            "\n",
-            "Epoch 6/49\n",
-            "----------\n",
-            "train Loss: 71.7495\n",
-            "val Loss: 50.6224\n",
-            "\n",
-            "Epoch 7/49\n",
-            "----------\n",
-            "train Loss: 57.6994\n",
-            "val Loss: 72.9950\n",
-            "\n",
-            "Epoch 8/49\n",
-            "----------\n",
-            "train Loss: 47.6591\n",
-            "val Loss: 26.8233\n",
-            "\n",
-            "Epoch 9/49\n",
-            "----------\n",
-            "train Loss: 37.3017\n",
-            "val Loss: 228.0837\n",
-            "\n",
-            "Epoch 10/49\n",
-            "----------\n",
-            "train Loss: 35.5731\n",
-            "val Loss: 54.2700\n",
-            "\n",
-            "Epoch 11/49\n",
-            "----------\n",
-            "train Loss: 30.7396\n",
-            "val Loss: 75.6488\n",
-            "\n",
-            "Epoch 12/49\n",
-            "----------\n",
-            "train Loss: 27.1768\n",
-            "val Loss: 48.0272\n",
-            "\n",
-            "Epoch 13/49\n",
-            "----------\n",
-            "train Loss: 23.9363\n",
-            "val Loss: 44.3385\n",
-            "\n",
-            "Epoch 14/49\n",
-            "----------\n",
-            "train Loss: 31.0417\n",
-            "val Loss: 51.9423\n",
-            "\n",
-            "Epoch 15/49\n",
-            "----------\n",
-            "train Loss: 22.3026\n",
-            "val Loss: 33.0168\n",
-            "\n",
-            "Epoch 16/49\n",
-            "----------\n",
-            "train Loss: 17.8015\n",
-            "val Loss: 57.0293\n",
-            "\n",
-            "Epoch 17/49\n",
-            "----------\n",
-            "train Loss: 25.9379\n",
-            "val Loss: 29.3402\n",
-            "\n",
-            "Epoch 18/49\n",
-            "----------\n",
-            "train Loss: 53.0120\n",
-            "val Loss: 192.1927\n",
-            "\n",
-            "Epoch 19/49\n",
-            "----------\n",
-            "train Loss: 40.4434\n",
-            "val Loss: 106.7317\n",
-            "\n",
-            "Epoch 20/49\n",
-            "----------\n",
-            "train Loss: 26.8765\n",
-            "val Loss: 85.9291\n",
-            "\n",
-            "Epoch 21/49\n",
-            "----------\n",
-            "train Loss: 27.3085\n"
+            "----------\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-0045e61cc89d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;31m# Train and evaluate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m \u001b[0mmodel_ft\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_ft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdataloaders_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer_ft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnum_epochs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mregression\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_ft\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"drive/MyDrive/how_good_is_my_plot/cnn_weights/resnet101_quality.pth\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/drive/MyDrive/how_good_is_my_plot/fine_tune_for_plots.py\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, dataloader, criterion, optimizer, device, num_epochs, regression)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0;31m# Iterate over data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m             \u001b[0;32mfor\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdataloader\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mphase\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m                 \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m                 \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    515\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sampler_iter\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    516\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 517\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    518\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    519\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1182\u001b[0m             \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1183\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_tasks_outstanding\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1184\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1185\u001b[0m                 \u001b[0;31m# Check for _IterableDatasetStopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1186\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mworker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_IterableDatasetStopIteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     }
